CUI-66 Set vertical alignment for inline-block elements - fixes vertical alignment in firefox.

--- a/source/less/components/toggle.less
+++ b/source/less/components/toggle.less
@@ -91,6 +91,7 @@
         }
         &:after {
           display: inline-block;
+          vertical-align: middle;
           margin: 0 0 0 5*@px;
           .box-sizing(border-box);
           .border-radius(0.25rem);
@@ -109,6 +110,7 @@
           position: relative;
           left: -28*@px;
           display: inline-block;
+          vertical-align: middle;
           .box-sizing(border-box);
           .border-radius(0.25rem);
           .gradient(@switch-handle-gradient-start-color, @switch-handle-gradient-end-color);
